# qualcomm-ui-templates

./: .gitignore  .syncpackrc  README.md  install-all.sh  package-lock.json  package.json  pnpm-lock.yaml
.github/: dependabot.yaml
.github/workflows/: qcom-preflight-checks.yml  update-qui.yml
scripts/: build-all.sh  install-all.sh  lint-all.sh  run-all.sh  update-pnpm-all.sh
templates/angular-csr/: README.md  angular.json  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.json
templates/angular-ssr/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.lib.json  tsconfig.spec.json
templates/react-electron-monorepo/: .gitignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
templates/react-nextjs/: eslint.config.js  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
templates/react-qui-docs/: .gitignore  README.md  eslint.config.js  oxfmt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  qui-docs.config.ts  tsconfig.json  tsconfig.lib.json  tsconfig.node.json  tsconfig.scripts.json  vite.config.ts
templates/react-router-ssr/: eslint.config.js  oxfmt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
templates/react-tauri-monorepo/src-tauri/: Cargo.toml  tauri.conf.json
templates/react-tauri-monorepo/src-tauri/capabilities/: default.json
templates/react-tauri-monorepo/src-tauri/src/: lib.rs  main.rs
templates/react-tauri-monorepo/src-tauri/src/commands/: mod.rs  open_url.rs  theme.rs
templates/typescript/: package.json  (+4 more)
(+28 files in other folders)
