[package]
name = "react-tauri-monorepo"
version = "0.1.0"
description = "A Tauri App with QUI React"
authors = ["Qualcomm"]
edition = "2021"

[lib]
name = "react_tauri_monorepo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
